Validated translations where same as original

--- a/shared/locales/src/en.json
+++ b/shared/locales/src/en.json
@@ -1,3 +1,168 @@
 {
-    "a48e6035-5e61-4fc7-9ac4-89016e7174fe": "My account"
+  "a48e6035-5e61-4fc7-9ac4-89016e7174fe": "My account",
+  "00204508-e8ce-4b81-b978-4b0a4a0472f5": "Upload PDF",
+  "00c90aa3-2d42-45bc-a3e7-56565b7a4e0e": "Website",
+  "02b0533d-31b1-44ce-a22b-47d7f90adea8": "This category should be invisible. Check if the record categories are filtered using .filter(c => c.isEnabled(value))",
+  "04548161-abc0-4bea-bdd3-fdbacddc22f8": "Start",
+  "0456ef2e-5e86-48fa-835c-fd8ec1921f5e": "Info",
+  "079c3c5d-b816-4adf-9287-6f5352a2cd81": "Stripe",
+  "085e5b60-8c26-49b2-bba3-04dd38b3a891": "0",
+  "089baffa-1456-48a4-ab5b-8994143c011b": "Footer",
+  "0a2e758f-37b1-448a-a14f-a0548443faec": "Deadline",
+  "0b6247ef-b8bb-4ed7-b403-b0a58ddebaf5": "Issuer",
+  "0b894cff-2ae3-4954-a71c-7ccd1280668a": "Belfius Mobile",
+  "0c35caa6-6240-4a92-9d89-78acf2c79fc0": "Placeholder",
+  "0c3689c1-01f8-455a-a9b0-8f766c03b2d3": "+32 470 12 34 56",
+  "0d256e87-ab44-4051-9efc-4749c8edb0c0": "Custom",
+  "10b83895-551f-4892-9b58-b7b62db58726": "Link:",
+  "116f6ca0-c077-4468-b79b-d329f6a8db77": "TTL",
+  "131fbe93-acac-497e-a768-bbfccf3425f0": "Hello Bank! app",
+  "151006be-86c2-48cd-bcd7-7c3bf9b76080": "Detail",
+  "168c5bc7-2a5e-4bb9-99c0-b91905e5a193": "euro",
+  "1c6a928f-1e53-421e-939f-a54959b45769": "Secret",
+  "204f8618-c061-449d-aa74-5085e67b1d24": "Detail",
+  "21610c8e-44fb-4afb-9456-c57b938d4c8e": "Extra Stripe account",
+  "21b523b8-b6f1-4b21-ba56-0f9640670339": "Easy Banking App (BNP Paribas Fortis)",
+  "269872df-ab70-4eae-b671-ab9246162d4e": "account",
+  "28b0f035-cb44-48b7-b60f-093f6adc26fb": "Zip code",
+  "29360811-3663-496c-8d8f-c9fdf9467a74": "ID",
+  "2be4de1c-159a-4767-b461-3ba0f67877d7": "Stripe account",
+  "2cc5355d-3c19-4a6e-a2c7-1d93e423a8d2": "URI",
+  "325f85b1-ff89-4bde-a2df-1328c8ea4a3a": "Voucher",
+  "32e049b4-acd6-4d77-a5b8-0632111f2445": "Tickets",
+  "33adbc14-dd1a-43a7-a015-98a3322b58c5": "Info",
+  "340f1829-3bb9-419d-8646-ba3b34eea958": "email",
+  "36459d6c-1685-463a-829f-bc92f83d1f0f": "Privacy",
+  "390d335e-98c4-4c60-92fc-f1616096c875": "tickets",
+  "3b81d4a5-0af5-4807-8ea9-264d2f99ee05": "Redirect URI",
+  "3cb04b43-16ca-4467-8729-ea7dcd206ed0": "ticket",
+  "3e23e0d2-ec8c-44f9-92fa-a1fce10c0185": "Start",
+  "3ef919e4-b9a3-4b58-a316-83c9340c9830": "School",
+  "405a811e-ebb1-4948-84cd-8fb5860104e6": "Stamhoofd",
+  "40abbf9c-2dd3-471a-a699-f6af656feb5e": "Rate limits",
+  "425f3938-b431-406b-90c2-cdbb896ca21b": "Diabetes",
+  "43f4f751-2752-4ecc-9d78-136853852b43": "LGBTQ+",
+  "44a86a23-a189-421b-b53a-8f922c17ab78": "download",
+  "46eb81ad-4f6c-4c29-9741-ddcb0003a208": "Sponsors",
+  "49dd6919-a853-4004-b817-ae811de527ab": "Deadlines",
+  "4a07f8e5-c16e-4706-9387-9d3ded9e2b3c": "Type",
+  "4db6cde7-274f-4202-9351-3e9ce82794c1": "Via Mollie",
+  "4efa0c2b-f5af-48fc-9fb3-37ccbdf1ca24": "Reset",
+  "5330841f-d2b1-4014-bbea-1b3a8a68faa3": "JNM",
+  "552906c2-db14-4bd8-b499-c29f61f57472": "KLJ",
+  "5573d401-88aa-4221-9ed7-44380d970177": "Webshop auth",
+  "55a6f957-af81-40b3-8c83-2096f22044c8": "Code",
+  "5670bc42-cf94-46b6-9ce0-7cdc4ffbb4d9": "simon@stamhoofd.be",
+  "592f4d78-1019-4b7f-b5ec-0f62eadf7c2b": "Sign in with Google",
+  "5f8c1ac5-a650-4046-80b6-0fe37fa12439": "Tags",
+  "612b0f89-4a6e-4616-a50f-6e228daa86c3": "UiTPAS",
+  "619a9ba5-895c-4334-a126-a1c4b780e87b": "spinner",
+  "6285b165-8d32-4a00-bb3f-0f95abcda58f": "email",
+  "62a07ea0-53ad-4962-88ff-26ea1ab493b0": "status",
+  "630ab37a-85c8-4bbd-a281-b87e82a976d5": "Feedback",
+  "68914509-aa54-40c7-9f53-7b8a02149198": "Stamhoofd",
+  "6b3555a2-ace4-4f37-a1fd-18921552f2b5": "stamhoofd.be",
+  "6b4b9fb3-ca24-43cd-9f7b-a5f597b943d8": "Status",
+  "6c9d45e5-c9f6-49c8-9362-177653414c7e": "Type",
+  "6dde271d-4108-48ce-a433-4ad80478c4ef": "Maximum {max}",
+  "6df6c342-d948-41b1-b913-55cfd3c2b558": "email",
+  "6e40269e-10f8-4c19-804f-dac6ba75959b": "IBAN",
+  "70af9014-24ec-484c-b11b-4e2510bb09c1": "Client Secret",
+  "70ee9a44-6cd7-49a1-9852-8519c23ec13a": "Via Buckaroo",
+  "7254f2f6-0d15-4e81-85cf-cff6438c9e98": "(ID:",
+  "73da6e39-663b-42f3-b2b5-5c87abe1975b": "Badminton",
+  "77a5d5d5-a1c6-476b-8fbf-354a40ca5fcb": "Sport",
+  "780fa99d-7109-4f57-934b-1f4c5643a794": "https://",
+  "7c04a4f3-25c5-4663-9833-87a7aecbf0b9": "Demoshop",
+  "8096d9e3-1bb3-4015-911d-9e13388e8bfd": "tickets",
+  "8982ff9e-7905-4b82-9e9c-cb37a6a9481e": "964824335, 116455337, 228149715, ...",
+  "89d0154d-edcb-4a56-b4d7-1c95c13c4fb1": "Stripe Dashboard",
+  "8bc22ee1-303e-4b40-94dc-72c5869abdbc": "Production",
+  "8cdbbc91-88ab-4d25-8f42-b34369e959f0": "Single-Sign-On",
+  "8daf57de-69cf-48fe-b09b-772c54473184": "ID",
+  "8f39177b-f214-4f23-82ab-329c66ae731a": "Payconiq",
+  "8f4d1891-4198-4133-8bcb-d90437affe83": "FOS Open Scouting",
+  "8f9575f3-9787-4fa5-9ddf-dd1fa4103996": "Bancontact",
+  "9120db75-8638-4cab-9dca-8bd81390149e": "Developers",
+  "9464cf2b-10a9-4690-8ab6-2e3d2f3e9b9d": "Document",
+  "95708a22-4743-4f04-aa24-fee0220da923": "Zone",
+  "978520d9-7210-414a-82fd-9c04697b1a08": "Afghanistan",
+  "979af771-f3ab-4105-9478-d8ee14db66f1": "Single-Sign-On (",
+  "9965a103-1ff5-444d-99f4-39fb0adb903b": "1 week",
+  "997da269-7091-470e-9032-abe1a1ea8096": "Zip code",
+  "99b55ec2-7b90-4456-82bd-4168ab909822": "Webshop footer",
+  "9b625e82-f571-4fc6-a83b-47cb14ac1739": "Accounts",
+  "9c3179f1-549a-4f72-975b-96b1baf0f239": "Webshop via",
+  "9ce28983-01ef-44bc-bc02-b76575bda1ce": "Privacy",
+  "9db3d461-f36c-4b2e-9e51-0b1e9a1517c2": "Client ID",
+  "9e080d96-2c2b-47e3-b56c-d58d993974c9": "Gender",
+  "9f6b5880-d02b-46a8-9b83-fc1e5320defe": "ING Banking",
+  "a0dfe596-0670-48bc-a5f3-2c9308c70a17": "type",
+  "a248259d-cf0d-4942-a1b4-ec7e2b85246b": "Weekends",
+  "a2f52798-c27f-4904-b651-2bec3aeebf21": "KBC Mobile",
+  "a3765fff-0634-4ffe-a726-005fd8ba5dcd": "Types",
+  "a4919b04-c7de-4c7b-96ac-e18acc476ad7": "Scan tickets",
+  "a4dde8e6-d0f7-4ad6-b880-cf5467771770": "Payconiq by Bancontact",
+  "a6621627-ce47-41df-a715-1adda44fa4df": "Tennis",
+  "a7f32979-1ee8-47fe-a409-7b17ce9f9d39": "Account ID",
+  "aa5a52fe-dd8e-4d28-9dcc-a730146e7972": "iDEAL",
+  "ac747fb2-d391-499b-8cee-1ed7241e6177": "Account",
+  "af5f50da-3290-44bd-a104-896231e6ea08": "Google",
+  "af839b8a-1367-4655-ad1c-ee658843e9f1": "is",
+  "b1d528c7-1e05-48de-aadd-d30c28581bf2": "Token",
+  "b1dd12f9-89d8-446b-8005-6be3a812a2b2": "Tags",
+  "b33fd0c6-4a54-469e-b108-d75f4d8c613d": "KSA",
+  "b40d200c-4265-4d58-a7f4-7c2498b062b9": "Tickets",
+  "b47abc59-c79d-4d69-b961-de80e562e8f2": "Excel export",
+  "b53032c7-e96d-42ff-8d6f-d5b40c5fa700": "Billing",
+  "b6ca6bd6-3ba1-445c-aefa-396efead493b": "Hockey",
+  "b8cf0b1f-04c4-4a85-9a19-027a5326fd11": "Mollie",
+  "b96a2898-7229-4397-99f1-2ffd761982f3": "Bancontact",
+  "be748ea7-badc-48b6-ae7a-8eca6341dc08": "Variant",
+  "bf20a769-772d-46b2-9b48-2ea29c96f113": "Via",
+  "bfcceb79-e614-4e9c-9fba-0ec2bd3f8f2a": "1",
+  "c2ee9504-b07a-4d79-bd25-c14a1bba4d59": "Vouchers",
+  "c56ee3f1-b83d-4118-a703-6f98450508cd": "Banner",
+  "c8f1e4d4-669c-4ccb-a9d9-30584f6c2d55": "Via {organization}",
+  "cab2694d-8d0f-44d0-9819-d2d2c4148b22": "Staging",
+  "cb57875f-a2b7-4076-8f32-a9a970f68907": "Drip",
+  "cbefe240-5d20-4b9a-8cbb-29286e3dae4d": "DNS",
+  "cc287710-eb24-4b30-827c-20ecccdcb04f": "Golf",
+  "ccfc0566-2fc4-4c0a-b1da-c3059cad6586": "www.stamhoofd.be",
+  "cd0a1bf5-5cfe-40c6-bbd1-9f40574d559b": "Open",
+  "cd7dec4c-5183-4c18-b447-b4095436bb5c": "1, 2, 3, ...",
+  "cdd1fd85-1c4e-416b-b166-48a4ee6ee51f": "Layout",
+  "cdfd1cea-e2d5-41bf-80f7-bc62303b6c70": "Ctrl",
+  "ceba695c-105b-49c9-aaa4-bf716c4aec6b": "tags",
+  "d101ec4a-219f-4f23-afa0-e8dc4862c354": "Logo",
+  "d3e021e4-a9eb-4f7e-a538-8d2dbc27341c": "Download",
+  "d517ff0c-abad-4a23-91e2-3463279cfa65": "Development",
+  "d54cbd0f-91c6-484a-b071-5161d4060dd7": "Key",
+  "d7003b29-cc92-4ef4-b07b-f283193ef2ae": "Status",
+  "d703d8bc-b08f-4b4d-9c26-f255edd70f56": "Link",
+  "d84503e9-7d0e-4c4b-a3ca-92bfbed6ca49": "Account",
+  "dafc7b04-dfb2-4dbc-8bcf-f7e9c6356442": "Zip code",
+  "dd61d33b-367e-4e40-8ac6-84c286b931bc": "Percentage",
+  "de5706ec-7edc-4e62-b3f7-d6e414720480": "Filter",
+  "de971042-551d-43d2-ab47-e76132156887": "Ticket",
+  "e0a54e0c-03b3-43c6-b4ca-962c5b1d6772": "Minimum",
+  "e1193431-b95a-4a8a-94b2-8659005dcb77": "TabBarController",
+  "e13af8ee-f442-4a98-b3e6-6f3d84fba30c": "Via",
+  "e38c0b49-b038-4c9c-9653-fe1e4a078226": "Webshop",
+  "e4b54218-b4ff-4c29-a29e-8bf9a9aef0c5": "Status",
+  "e79825e3-975a-4da9-8425-77beac42a41f": "Portugal",
+  "e80487d1-d969-41fe-b2e8-59192e639fbb": "tags",
+  "e8ef97dc-5470-4d36-9c4a-a9c2ec92b7e2": "Account ID",
+  "ed995f5d-eeff-44ad-ac35-f518b2892524": "Detail",
+  "f4155ecb-b961-4b07-8c4a-69e2d2518a52": "Command(⌘)",
+  "f4b5c997-f9ed-4ba9-aabd-ac1d5fa37dfb": "Document",
+  "f5fc5d6b-49ef-4b3d-80b7-90e1f81220fa": "Buckaroo",
+  "f64ba2c0-b20e-4aa5-94d2-ff2a3173ee51": "Label",
+  "f6c4cd8c-97e5-40d0-9331-69d15e100726": "Website",
+  "f6de6c56-6326-42b2-b586-2bf607e058a7": "Developers",
+  "f97ad8c1-31d2-4b61-9e09-3be86eaeba08": "Type",
+  "fbb0dee5-c500-4bb4-81d6-945666ae4784": "account",
+  "fd3fea4f-73c7-4c8d-90cd-80ea90e53b98": "Gender",
+  "fde0cfa6-c279-4eef-ab75-8f62fd4028a8": "Status",
+  "fe29857c-e4ac-4b25-aa0e-31813f3570c2": "tag"
 }
