--- a/shared/locales/src/fr.json
+++ b/shared/locales/src/fr.json
@@ -1,3 +1,85 @@
 {
-    "ab858fd6-4451-4d88-869e-be425a661169": "Faible"
+  "ab858fd6-4451-4d88-869e-be425a661169": "Faible",
+  "0456ef2e-5e86-48fa-835c-fd8ec1921f5e": "Info",
+  "079c3c5d-b816-4adf-9287-6f5352a2cd81": "Stripe",
+  "085e5b60-8c26-49b2-bba3-04dd38b3a891": "0",
+  "0b894cff-2ae3-4954-a71c-7ccd1280668a": "Belfius Mobile",
+  "0c3689c1-01f8-455a-a9b0-8f766c03b2d3": "+32 470 12 34 56",
+  "116f6ca0-c077-4468-b79b-d329f6a8db77": "TTL",
+  "168c5bc7-2a5e-4bb9-99c0-b91905e5a193": "euro",
+  "1c6a928f-1e53-421e-939f-a54959b45769": "Secret",
+  "21b523b8-b6f1-4b21-ba56-0f9640670339": "Easy Banking App (BNP Paribas Fortis)",
+  "240b3e60-bab9-47d6-bcfb-71e138d2cd2c": "0 euro",
+  "29360811-3663-496c-8d8f-c9fdf9467a74": "ID",
+  "2cc5355d-3c19-4a6e-a2c7-1d93e423a8d2": "URI",
+  "2f92cf37-00f5-41fe-bf7a-f309c38eed10": "Papa",
+  "33adbc14-dd1a-43a7-a015-98a3322b58c5": "Info",
+  "340f1829-3bb9-419d-8646-ba3b34eea958": "email",
+  "405a811e-ebb1-4948-84cd-8fb5860104e6": "Stamhoofd",
+  "43f4f751-2752-4ecc-9d78-136853852b43": "LGBTQ+",
+  "46eb81ad-4f6c-4c29-9741-ddcb0003a208": "Sponsors",
+  "4a07f8e5-c16e-4706-9387-9d3ded9e2b3c": "Type",
+  "4db6cde7-274f-4202-9351-3e9ce82794c1": "Via Mollie",
+  "5330841f-d2b1-4014-bbea-1b3a8a68faa3": "JNM",
+  "552906c2-db14-4bd8-b499-c29f61f57472": "KLJ",
+  "55a6f957-af81-40b3-8c83-2096f22044c8": "Code",
+  "5670bc42-cf94-46b6-9ce0-7cdc4ffbb4d9": "simon@stamhoofd.be",
+  "59b85264-c4c3-4cf6-8923-9b43282b2787": "hallo@stamhoofd.be",
+  "612b0f89-4a6e-4616-a50f-6e228daa86c3": "UiTPAS",
+  "619a9ba5-895c-4334-a126-a1c4b780e87b": "spinner",
+  "630ab37a-85c8-4bbd-a281-b87e82a976d5": "Feedback",
+  "662467b7-da51-4fe2-bff4-784c8f028e58": "Single-Sign-On (SSO)",
+  "68914509-aa54-40c7-9f53-7b8a02149198": "Stamhoofd",
+  "6b3555a2-ace4-4f37-a1fd-18921552f2b5": "stamhoofd.be",
+  "6c9d45e5-c9f6-49c8-9362-177653414c7e": "Type",
+  "6dde271d-4108-48ce-a433-4ad80478c4ef": "Maximum {max}",
+  "6e40269e-10f8-4c19-804f-dac6ba75959b": "IBAN",
+  "70ee9a44-6cd7-49a1-9852-8519c23ec13a": "Via Buckaroo",
+  "73da6e39-663b-42f3-b2b5-5c87abe1975b": "Badminton",
+  "77a5d5d5-a1c6-476b-8fbf-354a40ca5fcb": "Sport",
+  "780fa99d-7109-4f57-934b-1f4c5643a794": "https://",
+  "7c619773-33de-451c-9f8e-695e871058bb": "Jansen",
+  "8982ff9e-7905-4b82-9e9c-cb37a6a9481e": "964824335, 116455337, 228149715, ...",
+  "8abddd1b-0359-42fa-ab4d-707f39d84852": "{number}e",
+  "8bc22ee1-303e-4b40-94dc-72c5869abdbc": "Production",
+  "8daf57de-69cf-48fe-b09b-772c54473184": "ID",
+  "8f39177b-f214-4f23-82ab-329c66ae731a": "Payconiq",
+  "8f4d1891-4198-4133-8bcb-d90437affe83": "FOS Open Scouting",
+  "8f9575f3-9787-4fa5-9ddf-dd1fa4103996": "Bancontact",
+  "9464cf2b-10a9-4690-8ab6-2e3d2f3e9b9d": "Document",
+  "95708a22-4743-4f04-aa24-fee0220da923": "Zone",
+  "978520d9-7210-414a-82fd-9c04697b1a08": "Afghanistan",
+  "979af771-f3ab-4105-9478-d8ee14db66f1": "Single-Sign-On (",
+  "9f6b5880-d02b-46a8-9b83-fc1e5320defe": "ING Banking",
+  "a0dfe596-0670-48bc-a5f3-2c9308c70a17": "type",
+  "a2f52798-c27f-4904-b651-2bec3aeebf21": "KBC Mobile",
+  "a3765fff-0634-4ffe-a726-005fd8ba5dcd": "Types",
+  "a6621627-ce47-41df-a715-1adda44fa4df": "Tennis",
+  "aa5a52fe-dd8e-4d28-9dcc-a730146e7972": "iDEAL",
+  "af5f50da-3290-44bd-a104-896231e6ea08": "Google",
+  "b33fd0c6-4a54-469e-b108-d75f4d8c613d": "KSA",
+  "b40d200c-4265-4d58-a7f4-7c2498b062b9": "Tickets",
+  "b6ca6bd6-3ba1-445c-aefa-396efead493b": "Hockey",
+  "b8cf0b1f-04c4-4a85-9a19-027a5326fd11": "Mollie",
+  "b96a2898-7229-4397-99f1-2ffd761982f3": "Bancontact",
+  "bf20a769-772d-46b2-9b48-2ea29c96f113": "Via",
+  "bfcceb79-e614-4e9c-9fba-0ec2bd3f8f2a": "1",
+  "c8f1e4d4-669c-4ccb-a9d9-30584f6c2d55": "Via {organization}",
+  "cb57875f-a2b7-4076-8f32-a9a970f68907": "Drip",
+  "cbefe240-5d20-4b9a-8cbb-29286e3dae4d": "DNS",
+  "cc287710-eb24-4b30-827c-20ecccdcb04f": "Golf",
+  "ccb47323-6aa7-4f37-a03c-848ed47eb412": "E-mail",
+  "ccfc0566-2fc4-4c0a-b1da-c3059cad6586": "www.stamhoofd.be",
+  "cd7dec4c-5183-4c18-b447-b4095436bb5c": "1, 2, 3, ...",
+  "cdfd1cea-e2d5-41bf-80f7-bc62303b6c70": "Ctrl",
+  "d101ec4a-219f-4f23-afa0-e8dc4862c354": "Logo",
+  "de971042-551d-43d2-ab47-e76132156887": "Ticket",
+  "e0a54e0c-03b3-43c6-b4ca-962c5b1d6772": "Minimum",
+  "e1193431-b95a-4a8a-94b2-8659005dcb77": "TabBarController",
+  "e13af8ee-f442-4a98-b3e6-6f3d84fba30c": "Via",
+  "e79825e3-975a-4da9-8425-77beac42a41f": "Portugal",
+  "ef6ac7e5-de7e-4e2e-802f-de730294f05d": "+ 0 euro",
+  "f4b5c997-f9ed-4ba9-aabd-ac1d5fa37dfb": "Document",
+  "f5fc5d6b-49ef-4b3d-80b7-90e1f81220fa": "Buckaroo",
+  "f97ad8c1-31d2-4b61-9e09-3be86eaeba08": "Type"
 }
