--- a/shared/locales/src/en.json
+++ b/shared/locales/src/en.json
@@ -17,6 +17,7 @@
   "10b83895-551f-4892-9b58-b7b62db58726": "Link:",
   "116f6ca0-c077-4468-b79b-d329f6a8db77": "TTL",
   "131fbe93-acac-497e-a768-bbfccf3425f0": "Hello Bank! app",
+  "edac937d-5eda-445e-8bba-2c2b353d3f27": "klachten@stamhoofd.be",
   "151006be-86c2-48cd-bcd7-7c3bf9b76080": "Detail",
   "168c5bc7-2a5e-4bb9-99c0-b91905e5a193": "euro",
   "1c6a928f-1e53-421e-939f-a54959b45769": "Secret",
