--- a/shared/locales/src/fr.json
+++ b/shared/locales/src/fr.json
@@ -30,6 +30,7 @@
   "630ab37a-85c8-4bbd-a281-b87e82a976d5": "Feedback",
   "662467b7-da51-4fe2-bff4-784c8f028e58": "Single-Sign-On (SSO)",
   "68914509-aa54-40c7-9f53-7b8a02149198": "Stamhoofd",
+  "edac937d-5eda-445e-8bba-2c2b353d3f27": "klachten@stamhoofd.be",
   "6b3555a2-ace4-4f37-a1fd-18921552f2b5": "stamhoofd.be",
   "6c9d45e5-c9f6-49c8-9362-177653414c7e": "Type",
   "6dde271d-4108-48ce-a433-4ad80478c4ef": "Maximum {max}",
