--- a/shared/locales/src/digit/machine-GoogleGemini-en.json
+++ b/shared/locales/src/digit/machine-GoogleGemini-en.json
@@ -619,6 +619,10 @@
     "original": "Deze functie is niet beschikbaar voor deze groep",
     "translation": "This role is not available for this group"
   },
+  "ab0c7981-0d5f-4c36-bd3f-07ddc2a63759": {
+    "original": "Jouw groep bevindt zich in een ander werkjaar dan KSA Nationaal.",
+    "translation": "Your group is in a different work year than KSA National."
+  },
   "ab21ae18-0181-44ea-b41d-ff61c9358858": {
     "original": "Voor Mollie heb je een VZW nodig. Een feitelijke groep is niet voldoende (wordt niet geaccepteerd)",
     "translation": "For Mollie you need a non-profit organisation. An actual group is not sufficient (not accepted)"
@@ -746,6 +750,10 @@
   "cd5ee584-5b0c-4acb-af75-7b21ad37cead": {
     "original": "Het antwoord is niet gekend (werd nog nooit ingevuld in Ravot). Er worden geen lagere tarieven automatisch toegepast.",
     "translation": "The answer is not known (was never filled in in Ravot). No lower tariffs are automatically applied."
+  },
+  "cd60d49f-9fc8-4fb7-b574-1231874c1d43": {
+    "original": "Overloop alle stappen en bevestig dat je alles hebt nagekeken bij elke stap. Zorg dat alles ten laatste tegen 15 oktober is nagekeken.",
+    "translation": "Review all steps and confirm that you have checked everything at each step. Make sure everything is checked by October 15 at the latest."
   },
   "cd6e3548-aea1-4f74-9c66-b1fa43de6438": {
     "original": "Ticketverkoop via Ravot",
