Replaced translation keys

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -4910,5 +4910,56 @@
   "efc92098-8600-41e8-bbd9-a2d2edbcd19d": "activiteit",
   "0467006a-7ded-4e4f-acec-986d013bea6b": "beschikbaar",
   "06da1310-e17c-475e-bcd3-bb47844c24c1": "toevoegen",
-  "a9f552ad-87f3-4ed4-8fb6-2aea378b9665": "Taal wijzigen"
+  "a9f552ad-87f3-4ed4-8fb6-2aea378b9665": "Taal wijzigen",
+  "3642da6c-adad-4e20-aa5a-c6553b276770": "{paymentMethod} is nog niet geactiveerd door Stripe. Kijk na of alle nodige informatie is ingevuld in jullie Stripe dashboard. Vaak is het probleem dat het adres van één van de bestuurders ontbreekt in Stripe of de websitelink van de eenheid niet werd ingevuld.",
+  "a6d56271-af8e-40a4-9f23-1d29009d315e": "bv. inschrijven.jouwdomein.be",
+  "a6e3fab0-579d-4b68-b411-69ada157d06a": "Categorie bewerken",
+  "573d5fcf-0f9b-4843-9e18-a75adbfea2c8": "Keuze bewerken",
+  "18385fa4-410f-4adb-9b29-2ba7a3bfc8de": "Beheerder {firstName} werd verwijderd",
+  "e54a2770-82f9-4dea-b1fc-5f1b52f3e9ab": "{firstName} is toegevoegd als beheerder en heeft een uitnodiging via email ontvangen.",
+  "7d09e05b-865e-42dd-8d32-d37fd0b29c40": "De beheerder is aangepast",
+  "5fa277ba-65b9-46f7-8802-de56578eb620": "Jouw wachtwoord moet uit minstens {count} karakters bestaan",
+  "4f6627be-b20b-48b0-a2f7-8fc68d2465b2": "Deze wachtlijst wordt gebruikt door {groupNames}",
+  "c9a10eba-c0b7-492e-b6fa-07ec6ac074f7": "Alle talen",
+  "04e77650-18ef-40a1-942f-bf755e1ca4dc": "Geen vertaling",
+  "5cb71059-9a9c-452c-8957-4622c5dc4af5": "Bv. {example}",
+  "07cf8cd9-433f-42e6-8b3a-a5dba83ecc8f": "Optioneel",
+  "cb9fd3d2-c563-4d46-a26b-4438e5a887ef": "Eén lid is verwijderd",
+  "43300d52-0e3f-4189-b5b3-100ecb0f5e70": "{count} leden zijn verwijderd",
+  "ed55e67d-1dce-46b2-8250-948c7cd616c2": "Aantal",
+  "5fcbcd43-cfec-4968-84b2-6efc406609bf": "Vader",
+  "56abd9d2-307e-486a-8a85-753c508af11d": "Moeder",
+  "1db644a2-8fc8-4471-b7ef-544ac1a82f60": "Ouder",
+  "bc68e8f0-2911-42d3-afca-790ed9a5fa35": "Oma",
+  "9e41e85d-7135-4b27-a9d0-f55f11c0f51c": "Opa",
+  "d1ec5f91-44e9-49db-8337-22dfab2440b7": "Tante",
+  "14fdbd04-a37b-4e57-9be7-b0892511d0e0": "Oom",
+  "4402e10d-4229-492a-b7f7-fcf2a49af08d": "Buurvrouw",
+  "30130aed-32dd-446f-bb35-9dfa71ee37aa": "Buurman",
+  "9d618b2e-49dd-4930-9f0b-73c19d7ca168": "Vriend",
+  "ca5b258d-935e-4744-b9db-e736ea1b0960": "Nonkel",
+  "9a5c69e1-978a-40f4-996f-2ccfbdaa60de": "Pepe",
+  "6f401bac-7593-4220-8c85-b7d829c39673": "Meme",
+  "06fb5ba2-2838-4cb9-afd6-9a51485d9c90": "Grootvader",
+  "7b66774f-4b96-4407-aff5-54b60d7a36bc": "Je kan deze noodcontactpersoon ook automatisch toevoegen bij {memberNames}.",
+  "0fd21e1a-8cf1-4155-81bb-726304485ddd": "Je kan het GSM-nummer van een ouder niet opgeven als het GSM-nummer van {firstName} of omgekeerd. Vul het GSM-nummer van {firstName} zelf in.",
+  "4d1143d6-eae1-4f04-be1b-50ed99182c2a": "Je kan het e-mailadres van een ouder niet opgeven als het e-mailadres van {firstName} of omgekeerd. Vul het e-mailadres van {firstName} zelf in.",
+  "006efcef-ff11-4003-b8d1-17d735535c05": "van {name}",
+  "5ef454a0-9680-4615-bae6-85fa27771010": "Dit rijksregisternummer werd al ingevuld bij {firstName}. Vul a.u.b. het juiste rijksregisternummer in, dit kan invloed hebben op uw belastingaangifte.",
+  "dc69fb48-68a9-480b-a30d-553f8cc2e76f": "Dit rijksregisternummer wordt al gebruikt door een andere ouder ({name}). Vul a.u.b. het juiste rijksregisternummer in, dit kan invloed hebben op uw belastingaangifte.",
+  "0e3277e8-932a-4555-9f0e-ba3340bf2465": "Je kan deze ouder ook automatisch toevoegen bij {memberNames}.",
+  "a87d3f1e-7e08-4415-b1a9-8fd49aafcb12": "{from} is ook het adres van {names}. Als je wilt kan je het adres ook daar wijzigen naar {to}.",
+  "b7106b5c-ac87-4024-976d-67a456a75ba7": "De startdatum kan niet voor {date} liggen",
+  "3c534380-d395-4f40-8efd-550bb1548159": "De startdatum kan niet na {date} liggen",
+  "791cae45-e251-4f12-befc-1c1b44636156": "De einddatum kan niet na {date} liggen",
+  "67ce1c2e-a5ed-4f26-a369-41f4d8000590": "{name} is verwijderd",
+  "8748130b-9551-4ad4-b80e-9fd1119651a7": "{firstName} bewerken",
+  "92aaacf4-9d90-4874-b80f-eb1f451d4a79": "vraag",
+  "ca02d25d-e6cb-459a-96f5-1006c046b647": "vragen",
+  "e36359a5-8a89-4a6b-9d7f-ddda3bd448d8": "categorie",
+  "85d7fbc5-c3e4-4e63-ae61-a5812e3af382": "categorieën",
+  "99785e34-7587-4be9-bd43-b57dcb63b4a7": "Enkel {gender}",
+  "f1a4bbb9-1fa7-429b-b498-a902f68cb679": "Inschrijvingen is beperkt tot {gender}",
+  "121a5916-44ab-4870-9182-ffc53be0ceb2": "{firstName} is te jong. Inschrijvingen is beperkt tot leden {born-in-after-1995}",
+  "83c99392-7efa-44d3-8531-1843c5fa7c4d": "Ongeldig tarief"
 }
