--- a/shared/locales/src/en.json
+++ b/shared/locales/src/en.json
@@ -22,14 +22,18 @@
   "168c5bc7-2a5e-4bb9-99c0-b91905e5a193": "euro",
   "1c6a928f-1e53-421e-939f-a54959b45769": "Secret",
   "204f8618-c061-449d-aa74-5085e67b1d24": "Detail",
+  "30130aed-32dd-446f-bb35-9dfa71ee37aa": "Neighbor",
   "21610c8e-44fb-4afb-9456-c57b938d4c8e": "Extra Stripe account",
   "21b523b8-b6f1-4b21-ba56-0f9640670339": "Easy Banking App (BNP Paribas Fortis)",
   "269872df-ab70-4eae-b671-ab9246162d4e": "account",
-  "28b0f035-cb44-48b7-b60f-093f6adc26fb": "Zip code",
+  "28b0f035-cb44-48b7-b60f-093f6adc26fb": "Postal code",
   "29360811-3663-496c-8d8f-c9fdf9467a74": "ID",
   "2be4de1c-159a-4767-b461-3ba0f67877d7": "Stripe account",
   "2cc5355d-3c19-4a6e-a2c7-1d93e423a8d2": "URI",
+  "4402e10d-4229-492a-b7f7-fcf2a49af08d": "Neighbor",
   "325f85b1-ff89-4bde-a2df-1328c8ea4a3a": "Voucher",
+  "6f401bac-7593-4220-8c85-b7d829c39673": "great-grandmother",
+  "9a5c69e1-978a-40f4-996f-2ccfbdaa60de": "great-grandfather",
   "32e049b4-acd6-4d77-a5b8-0632111f2445": "Tickets",
   "33adbc14-dd1a-43a7-a015-98a3322b58c5": "Info",
   "340f1829-3bb9-419d-8646-ba3b34eea958": "email",
@@ -90,7 +94,7 @@
   "978520d9-7210-414a-82fd-9c04697b1a08": "Afghanistan",
   "979af771-f3ab-4105-9478-d8ee14db66f1": "Single-Sign-On (",
   "9965a103-1ff5-444d-99f4-39fb0adb903b": "1 week",
-  "997da269-7091-470e-9032-abe1a1ea8096": "Zip code",
+  "997da269-7091-470e-9032-abe1a1ea8096": "Postal code",
   "99b55ec2-7b90-4456-82bd-4168ab909822": "Webshop footer",
   "9b625e82-f571-4fc6-a83b-47cb14ac1739": "Accounts",
   "9c3179f1-549a-4f72-975b-96b1baf0f239": "Webshop via",
@@ -142,7 +146,7 @@
   "d7003b29-cc92-4ef4-b07b-f283193ef2ae": "Status",
   "d703d8bc-b08f-4b4d-9c26-f255edd70f56": "Link",
   "d84503e9-7d0e-4c4b-a3ca-92bfbed6ca49": "Account",
-  "dafc7b04-dfb2-4dbc-8bcf-f7e9c6356442": "Zip code",
+  "dafc7b04-dfb2-4dbc-8bcf-f7e9c6356442": "Postal code",
   "dd61d33b-367e-4e40-8ac6-84c286b931bc": "Percentage",
   "de5706ec-7edc-4e62-b3f7-d6e414720480": "Filter",
   "de971042-551d-43d2-ab47-e76132156887": "Ticket",
