--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -4942,8 +4942,8 @@
   "6f401bac-7593-4220-8c85-b7d829c39673": "Meme",
   "06fb5ba2-2838-4cb9-afd6-9a51485d9c90": "Grootvader",
   "7b66774f-4b96-4407-aff5-54b60d7a36bc": "Je kan deze noodcontactpersoon ook automatisch toevoegen bij {memberNames}.",
-  "0fd21e1a-8cf1-4155-81bb-726304485ddd": "Je kan het GSM-nummer van een ouder niet opgeven als het GSM-nummer van {firstName} of omgekeerd. Vul het GSM-nummer van {firstName} zelf in.",
-  "4d1143d6-eae1-4f04-be1b-50ed99182c2a": "Je kan het e-mailadres van een ouder niet opgeven als het e-mailadres van {firstName} of omgekeerd. Vul het e-mailadres van {firstName} zelf in.",
+  "0fd21e1a-8cf1-4155-81bb-726304485ddd": "Je kan het GSM-nummer van een ouder niet opgeven als het GSM-nummer van {firstName} of omgekeerd. Vul het eigen GSM-nummer van {firstName} in.",
+  "4d1143d6-eae1-4f04-be1b-50ed99182c2a": "Je kan het e-mailadres van een ouder niet opgeven als het e-mailadres van {firstName} of omgekeerd. Vul het eigen e-mailadres van {firstName} in.",
   "006efcef-ff11-4003-b8d1-17d735535c05": "van {name}",
   "5ef454a0-9680-4615-bae6-85fa27771010": "Dit rijksregisternummer werd al ingevuld bij {firstName}. Vul a.u.b. het juiste rijksregisternummer in, dit kan invloed hebben op uw belastingaangifte.",
   "dc69fb48-68a9-480b-a30d-553f8cc2e76f": "Dit rijksregisternummer wordt al gebruikt door een andere ouder ({name}). Vul a.u.b. het juiste rijksregisternummer in, dit kan invloed hebben op uw belastingaangifte.",
