--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -4961,5 +4961,13 @@
   "99785e34-7587-4be9-bd43-b57dcb63b4a7": "Enkel {gender}",
   "f1a4bbb9-1fa7-429b-b498-a902f68cb679": "Inschrijvingen is beperkt tot {gender}",
   "121a5916-44ab-4870-9182-ffc53be0ceb2": "{firstName} is te jong. Inschrijvingen is beperkt tot leden {born-in-after-1995}",
-  "83c99392-7efa-44d3-8531-1843c5fa7c4d": "Ongeldig tarief"
+  "83c99392-7efa-44d3-8531-1843c5fa7c4d": "Ongeldig tarief",
+  "0faa16e2-00d5-4427-bfa1-d6b5c9ad4404": "Het rijksregisternummer wordt gebruikt om fiscale attesten op te maken. Als {firstName} geen Belgische nationaliteit heeft, <button>klik dan hier</button>",
+  "00cc0002-1674-47dd-ae92-7547a678bafc": "Je ontvangt geen fiscale attesten. Toch een Belgische nationaliteit, <button>klik dan hier</button>",
+  "8bc01345-6078-4949-91e6-c003001896ab": "Deze ouder kan inloggen of registreren op één van de ingevoerde e-mailadressen en krijgt dan automatisch toegang tot de gegevens van {firstName} en het ledenportaal.",
+  "02ed38bf-5516-4e5a-b28c-6e73d7cf1009": "Deze ouder kan inloggen of registreren op het ingevoerde e-mailadres en krijgt dan automatisch toegang tot de gegevens van {firstName} en het ledenportaal.",
+  "49397bef-c935-42b4-980e-a3174d8a4710": "{firstName} kan inloggen of registreren op één van de ingevoerde e-mailadressen en krijgt dan automatisch toegang tot de gegevens van {firstName} en het ledenportaal.",
+  "9f6b9a67-e024-4cbc-9849-769807c6fc69": "{firstName} kan inloggen of registreren op het ingevoerde e-mailadres en krijgt dan automatisch toegang tot de gegevens van {firstName} en het ledenportaal.",
+  "b2287bc2-db81-4eb8-8fa1-3b1b70860707": "{firstName} ontvangt enkel communicatie op het eerste e-mailadres.",
+  "1394c960-ea6f-44e9-8278-2019623d15bc": "Als {name} geen Belgische nationaliteit heeft, <button>klik dan hier</button>"
 }
