Fixed wrong translation

--- a/shared/locales/src/machine-GoogleGemini-en.json
+++ b/shared/locales/src/machine-GoogleGemini-en.json
@@ -12929,7 +12929,7 @@
   },
   "b059530c-5267-49a7-b2ee-c7ae33f0c573": {
     "original": "Heeft {name} geen Belgische nationaliteit,",
-    "translation": "Does {name} not have Belgian nationality,"
+    "translation": "If {name} does not have Belgian nationality,"
   },
   "b05a9993-9743-4cb3-99f1-6deb5a44b7f5": {
     "original": "Is niet leeg",
