--- a/shared/locales/src/machine-GoogleGemini-fr.json
+++ b/shared/locales/src/machine-GoogleGemini-fr.json
@@ -83,6 +83,10 @@
     "original": "Waarschuwing voor beheerder",
     "translation": "Avertissement pour l’administrateur"
   },
+  "00cc0002-1674-47dd-ae92-7547a678bafc": {
+    "original": "Je ontvangt geen fiscale attesten. Toch een Belgische nationaliteit, <button>klik dan hier</button>",
+    "translation": "Vous ne recevrez pas de certificats fiscaux. Vous avez tout de même une nationalité belge, <button>cliquez ici</button>"
+  },
   "00e66af4-75a2-4e00-8b2e-f51ff670b800": {
     "original": "Ik geef enkel toestemming voor groepsfoto's",
     "translation": "J'autorise uniquement les photos de groupe"
@@ -210,6 +214,10 @@
   "02b47907-73e2-4cb2-b398-784f6cbce23a": {
     "original": "Uitbetalingsmededeling",
     "translation": "Communication de paiement"
+  },
+  "02ed38bf-5516-4e5a-b28c-6e73d7cf1009": {
+    "original": "Deze ouder kan inloggen of registreren op het ingevoerde e-mailadres en krijgt dan automatisch toegang tot de gegevens van {firstName} en het ledenportaal.",
+    "translation": "Ce parent peut se connecter ou s'enregistrer sur l'adresse électronique saisie et aura alors automatiquement accès aux données de {firstName} et au portail des membres."
   },
   "02ef437e-2166-49be-b5ae-73e5452546a0": {
     "original": "geen rechten",
@@ -1179,6 +1187,10 @@
     "original": "De URI van de vereniging is te kort",
     "translation": "L'URI de l'association est trop courte"
   },
+  "0faa16e2-00d5-4427-bfa1-d6b5c9ad4404": {
+    "original": "Het rijksregisternummer wordt gebruikt om fiscale attesten op te maken. Als {firstName} geen Belgische nationaliteit heeft, <button>klik dan hier</button>",
+    "translation": "Le numéro national est utilisé pour établir les certificats fiscaux. Si {firstName} n'a pas la nationalité belge, <button>cliquez ici</button>"
+  },
   "0fadc0c2-62b3-4e26-be91-1c05c0951be5": {
     "original": "In welk jaar? (mag maximaal 10 jaar geleden zijn)",
     "translation": "En quelle année ? (maximum 10 ans)"
@@ -1502,6 +1514,10 @@
   "13839d7e-2260-4ded-945f-02e4479ef0d5": {
     "original": "Als er een wachtlijst is ingesteld kunnen de leden op de wachtlijst inschrijven als de groep volzet is.",
     "translation": "Si une liste d'attente est configurée, les membres sur liste d'attente peuvent s'inscrire si le groupe est complet."
+  },
+  "1394c960-ea6f-44e9-8278-2019623d15bc": {
+    "original": "Als {name} geen Belgische nationaliteit heeft, <button>klik dan hier</button>",
+    "translation": "Si {name} n'a pas la nationalité belge, <button>cliquez ici</button>"
   },
   "13978903-0724-4935-a004-b9dbd4fe1ab1": {
     "original": "De annuleringskost wordt individueel en rekenkundig afgerond op 1 cent.",
@@ -5490,6 +5506,10 @@
   "492cd771-4145-4249-a009-147e11a6904f": {
     "original": "Je moet nog {price} betalen aan {name}, via het tabblad Boekhouding.",
     "translation": "Vous devez encore payer {price} à {name}, via l’onglet Comptabilité."
+  },
+  "49397bef-c935-42b4-980e-a3174d8a4710": {
+    "original": "{firstName} kan inloggen of registreren op één van de ingevoerde e-mailadressen en krijgt dan automatisch toegang tot de gegevens van {firstName} en het ledenportaal.",
+    "translation": "{firstName} peut se connecter ou s'enregistrer sur l'une des adresses électroniques saisies et aura alors automatiquement accès aux données de {firstName} et au portail des membres."
   },
   "4943ece9-450b-4913-a6d8-6834d011a1ee": {
     "original": "Waarschuwing",
@@ -10463,6 +10483,10 @@
     "original": "Ongeldige kortingscode",
     "translation": "Code de réduction invalide"
   },
+  "8bc01345-6078-4949-91e6-c003001896ab": {
+    "original": "Deze ouder kan inloggen of registreren op één van de ingevoerde e-mailadressen en krijgt dan automatisch toegang tot de gegevens van {firstName} en het ledenportaal.",
+    "translation": "Ce parent peut se connecter ou s'enregistrer sur l'une des adresses électroniques saisies et aura alors automatiquement accès aux données de {firstName} et au portail des membres."
+  },
   "8bc53634-08a5-4404-9455-421955e83ce4": {
     "original": "Je hebt geen toegangsrechten om de facturatiegegevens van deze vereniging te bewerken.",
     "translation": "Vous n’avez pas les droits d’accès nécessaires pour modifier les données de facturation de cette association."
@@ -11939,6 +11963,10 @@
     "original": "Je hebt geen toegang tot deze betaling",
     "translation": "Vous n'avez pas accès à ce paiement"
   },
+  "9f6b9a67-e024-4cbc-9849-769807c6fc69": {
+    "original": "{firstName} kan inloggen of registreren op het ingevoerde e-mailadres en krijgt dan automatisch toegang tot de gegevens van {firstName} en het ledenportaal.",
+    "translation": "{firstName} peut se connecter ou s'enregistrer sur l'adresse électronique saisie et aura alors automatiquement accès aux données de {firstName} et au portail des membres."
+  },
   "9f72f8ee-74c7-4757-b1dc-948f632114f2": {
     "original": "(BTW-plichtig)",
     "translation": "(assujetti à la TVA)"
@@ -13302,6 +13330,10 @@
   "b2248880-cba7-4115-912b-9cb981e3c2d1": {
     "original": "Domeinnaam wijzigen",
     "translation": "Modifier le nom de domaine"
+  },
+  "b2287bc2-db81-4eb8-8fa1-3b1b70860707": {
+    "original": "{firstName} ontvangt enkel communicatie op het eerste e-mailadres.",
+    "translation": "{firstName} reçoit uniquement les communications sur la première adresse électronique."
   },
   "b22d5516-2644-4f4a-bcb5-ad93b82a0d61": {
     "original": "Ik heb",
