Fixed some translations

--- a/shared/locales/src/fr.json
+++ b/shared/locales/src/fr.json
@@ -12,7 +12,7 @@
   "240b3e60-bab9-47d6-bcfb-71e138d2cd2c": "0 euro",
   "29360811-3663-496c-8d8f-c9fdf9467a74": "ID",
   "2cc5355d-3c19-4a6e-a2c7-1d93e423a8d2": "URI",
-  "2f92cf37-00f5-41fe-bf7a-f309c38eed10": "Papa",
+  "2f92cf37-00f5-41fe-bf7a-f309c38eed10": "Père",
   "33adbc14-dd1a-43a7-a015-98a3322b58c5": "Info",
   "340f1829-3bb9-419d-8646-ba3b34eea958": "email",
   "405a811e-ebb1-4948-84cd-8fb5860104e6": "Stamhoofd",
@@ -25,6 +25,7 @@
   "55a6f957-af81-40b3-8c83-2096f22044c8": "Code",
   "6f401bac-7593-4220-8c85-b7d829c39673": "arrière grand-mère",
   "9a5c69e1-978a-40f4-996f-2ccfbdaa60de": "arrière grand-père",
+  "4b2e0cb1-29e2-421d-a1c5-19a346a400cd": "Mère",
   "5670bc42-cf94-46b6-9ce0-7cdc4ffbb4d9": "simon@stamhoofd.be",
   "59b85264-c4c3-4cf6-8923-9b43282b2787": "hallo@stamhoofd.be",
   "612b0f89-4a6e-4616-a50f-6e228daa86c3": "UiTPAS",
